# MyOpengl

./: CMakeLists.txt  readme.txt
include/: buffer.h  camera.h  device.h  fileReader.h  imageReader.h  message.h  program.h  shader.h  stb_image.h  texture.h  uniform.h  windows.h
include/glad/: glad.h
lib/: glfw3.lib
shader/: shader.fs  shader.vs  shader2.fs  shader2.vs
shaders/: multi_stream.gs  subroutine.vert
src/: CMakeLists.txt  buffer.cpp  camera.cpp  config.h.in  device.cpp  fileReader.cpp  glad.c  main.cpp  program.cpp  shader.cpp  test.cpp  test2.cpp  texture.cpp  uniform.cpp  windows.cpp
src/glad/: glad.c
src/utils/: fileReader.cpp  imageReader.cpp
